<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_services"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="65dp"
        android:layout_gravity="top"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LaSub"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/sub_service"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LaPrice"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:hint="@string/rate_of_service"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/AddService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:background="@drawable/background_button"
            android:text="ADD Service"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>



    </RelativeLayout>

</LinearLayout>