<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:background="@color/blue_1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="VOCALS"
            android:textAlignment="center"
            android:textSize="45dp"
            android:textColor="#fff"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="350dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile" />


            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:textSize="25dp"
                android:textAlignment="viewStart"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="3dp"
            android:background="#000"
            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">



            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="350dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/order" />


            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders_transactions"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:textSize="25dp"
                android:textAlignment="viewStart"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="3dp"
            android:background="#000"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">



            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="350dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logout" />


            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:textSize="25dp"
                android:textAlignment="viewStart"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="3dp"
            android:background="#000"
            />



    </LinearLayout>



</LinearLayout>